--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -109,7 +109,7 @@ html, body {
 	}
 }
 img {
-	@include opacity(0.1);
+	// @include opacity(0.1);
 }
 nav {
 	position: fixed;
@@ -266,11 +266,16 @@ header {
 	}
 	video {
 		position: absolute;
-		right: 0;
-		bottom: 0;
-		min-width: 100%; 
-		min-height: 100%;
+		top: 50%;
+		left: 50%;
+		@include translate(-50%, -50%);
 		z-index: 0;
+		&w-100 {
+			width: 100%; 
+		}
+		&h-100 {
+			height: 100%; 
+		}
 	}
 	> .container {
 		position: relative;
@@ -591,10 +596,6 @@ header {
 		}
 	}
 }
-main {
-	min-height: 100%;
-	height: 100%;
-}
 section {
 	position: relative;
 	min-height: 100%;
@@ -657,6 +658,9 @@ footer {
 					@include breakpoint(1920px) {
 						font-size: 36px;
 					}
+					&:hover {
+						color: $primary;
+					}
 				}
 			}
 		}
@@ -672,37 +676,246 @@ footer {
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		@include background-size(cover);
+		overflow: hidden;
 		> .slider-wrap {
+			position: relative;
 			min-height: 100%;
 			height: 100%;
 			> .slider-item {
 				float: left;
+				position: relative;
 				min-height: 100%;
 				height: 100%;
+				@include breakpoint(1024px) {
+					padding-top: 48px;
+					padding-bottom: 48px;
+				}
+				@include breakpoint(1366px) {
+					padding-top: 65px;
+					padding-bottom: 65px;
+				}
+				@include breakpoint(1600px) {
+					padding-top: 75px;
+					padding-bottom: 75px;
+				}
+				@include breakpoint(1920px) {
+					padding-top: 150px;
+					padding-bottom: 150px;
+				}
 				&:not(:first-child) {
 					background-image: url("../img/bgAd.png");
 					background-position: center;
 					background-attachment: fixed;
 					background-repeat: no-repeat;
 					@include background-size(cover);
+					@include breakpoint(1024px) {
+						padding-top: 138px;
+					}
+					@include breakpoint(1366px) {
+						padding-top: 185px;
+					}
+					@include breakpoint(1600px) {
+						padding-top: 215px;
+					}
+					@include breakpoint(1920px) {
+						padding-top: 235px;
+					}
+				}
+			}
+		}
+		&-navi {
+			display: none;
+			position: absolute;
+			top: 50%;
+			line-height: 1.25;
+			z-index: 1;
+			@include translateY(-50%);
+			@include breakpoint(1024px) {
+				left: 101px;
+			}
+			@include breakpoint(1366px) {
+				left: 135px;
+			}
+			@include breakpoint(1600px) {
+				left: 158px;
+			}
+			@include breakpoint(1920px) {
+				left: 190px;
+			}
+			li {
+				color: #727378;
+				cursor: pointer;
+				@include breakpoint(1024px) {
+					font-size: 10px;
+				}
+				@include breakpoint(1366px) {
+					font-size: 13px;
+				}
+				@include breakpoint(1600px) {
+					font-size: 15px;
+				}
+				@include breakpoint(1920px) {
+					font-size: 18px;
+				}
+				&.active {
+					color: #fff;
+				}
+			}
+			> li {
+				@include breakpoint(1024px) {
+					padding-left: 14px;
+				}
+				@include breakpoint(1366px) {
+					padding-left: 18px;
+				}
+				@include breakpoint(1600px) {
+					padding-left: 22px;
+				}
+				@include breakpoint(1920px) {
+					padding-left: 26px;
+				}
+				+ li {
+					@include breakpoint(1024px) {
+						margin-top: 11px;
+					}
+					@include breakpoint(1366px) {
+						margin-top: 14px;
+					}
+					@include breakpoint(1600px) {
+						margin-top: 17px;
+					}
+					@include breakpoint(1920px) {
+						margin-top: 20px;
+					}
+				}
+			}
+			.character {
+				border-left: 1px solid #fff;
+				@include breakpoint(1024px) {
+					margin-left: -14px;
+				}
+				@include breakpoint(1366px) {
+					margin-left: -18px;
+				}
+				@include breakpoint(1600px) {
+					margin-left: -22px;
+				}
+				@include breakpoint(1920px) {
+					margin-left: -26px;
+				}
+				> li {
+					border-left: solid transparent;
+					@include breakpoint(1024px) {
+						padding-left: 11px;
+						font-size: 13px;
+						border-left-width: 2px;
+					}
+					@include breakpoint(1366px) {
+						padding-left: 14px;
+						font-size: 17px;
+						border-left-width: 3px;
+					}
+					@include breakpoint(1600px) {
+						padding-left: 17px;
+						font-size: 20px;
+						border-left-width: 4px;
+					}
+					@include breakpoint(1920px) {
+						padding-left: 20px;
+						font-size: 24px;
+						border-left-width: 5px;
+					}
+					+ li {
+						@include breakpoint(1024px) {
+							margin-top: 8px;
+						}
+						@include breakpoint(1366px) {
+							margin-top: 11px;
+						}
+						@include breakpoint(1600px) {
+							margin-top: 13px;
+						}
+						@include breakpoint(1920px) {
+							margin-top: 15px;
+						}
+					}
+					&.active {
+						border-color: #fff;
+					}
 				}
 			}
 		}
 	}
-	&-fade {
+	.item-title {
+		position: absolute;
+		@include breakpoint(1024px) {
+			top: 80px;
+			left: 171px;
+			width: 157px;
+			margin-bottom: -45px;
+		}
+		@include breakpoint(1366px) {
+			top: 107px;
+			left: 228px;
+			width: 209px;
+			margin-bottom: -60px;
+		}
+		@include breakpoint(1600px) {
+			top: 125px;
+			left: 267px;
+			width: 245px;
+			margin-bottom: -70px;
+		}
+		@include breakpoint(1920px) {
+			top: 150px;
+			left: 320px;
+			width: 294px;
+			margin-bottom: -84px;
+		}
 	}
 	&-navi {
-		// position: absolute;
-		// bottom: 20px;
-		// right: 508px;
+		position: absolute;
+		bottom: 2px;
+		z-index: 5;
+		@include breakpoint(1024px) {
+			right: 246px;
+		}
+		@include breakpoint(1366px) {
+			right: 328px;
+		}
+		@include breakpoint(1600px) {
+			right: 384px;
+		}
+		@include breakpoint(1920px) {
+			right: 461px;
+		}
 		li {
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			width: 50px;
-			height: 50px;
 			color: $black;
 			font-size: 21px;
+			cursor: pointer;
+			@include breakpoint(1024px) {
+				width: 27px;
+				height: 27px;
+				font-size: 12px;
+			}
+			@include breakpoint(1366px) {
+				width: 36px;
+				height: 36px;
+				font-size: 15px;
+			}
+			@include breakpoint(1600px) {
+				width: 42px;
+				height: 42px;
+				font-size: 18px;
+			}
+			@include breakpoint(1920px) {
+				width: 50px;
+				height: 50px;
+				font-size: 21px;
+			}
 			&:first-child {
 				background-color: $primary;
 			}
@@ -711,9 +924,231 @@ footer {
 			}
 		}
 	}
-	&-infinite {
+	&-fade {
+		position: relative;
+		margin-left: auto;
+		margin-right: auto;
+		@include breakpoint(1024px) {
+			width: 587px;
+			height: 352px;
+		}
+		@include breakpoint(1366px) {
+			width: 783px;
+			height: 470px;
+		}
+		@include breakpoint(1600px) {
+			width: 917px;
+			height: 550px;
+		}
+		@include breakpoint(1920px) {
+			width: 1100px;
+			height: 660px;
+		}
 		> .slider-wrap {
-			width: 1168px;
+			> .slider-item {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				align-items: center;
+				@include opacity(0);
+				@include translate(-50%, -50%);
+				@include transition(all 0.3s);
+				.slider-body {
+					position: relative;
+					letter-spacing: 0.1em;
+					@include opacity(0);
+					@include breakpoint(1024px) {
+						left: 53px;
+						width: 272px;
+					}
+					@include breakpoint(1366px) {
+						left: 71px;
+						width: 363px;
+					}
+					@include breakpoint(1600px) {
+						left: 83px;
+						width: 425px;
+					}
+					@include breakpoint(1920px) {
+						left: 100px;
+						width: 510px;
+					}
+					> p {
+						margin-bottom: 0;
+						color: $primary;
+						@include breakpoint(1024px) {
+							padding-left: 24px;
+							padding-right: 24px;
+							margin-top: 27px;
+							font-size: 12px;
+						}
+						@include breakpoint(1366px) {
+							padding-left: 32px;
+							padding-right: 32px;
+							margin-top: 36px;
+							font-size: 15px;
+						}
+						@include breakpoint(1600px) {
+							padding-left: 38px;
+							padding-right: 38px;
+							margin-top: 42px;
+							font-size: 17px;
+						}
+						@include breakpoint(1920px) {
+							padding-left: 45px;
+							padding-right: 45px;
+							margin-top: 50px;
+							font-size: 20px;
+						}
+						span {
+							display: block;
+						}
+					}
+					> .slider-text {
+						color: #fff;
+						@include breakpoint(1024px) {
+							padding-top: 37px;
+							padding-bottom: 37px;
+							padding-left: 16px;
+							margin-right: -16px;
+						}
+						@include breakpoint(1366px) {
+							padding-top: 50px;
+							padding-bottom: 50px;
+							padding-left: 21px;
+							margin-right: -21px;
+						}
+						@include breakpoint(1600px) {
+							padding-top: 58px;
+							padding-bottom: 58px;
+							padding-left: 25px;
+							margin-right: -25px;
+						}
+						@include breakpoint(1920px) {
+							padding-top: 70px;
+							padding-bottom: 70px;
+							padding-left: 30px;
+							margin-right: -30px;
+						}
+						h3 {
+							@include breakpoint(1024px) {
+								font-size: 17px;
+							}
+							@include breakpoint(1366px) {
+								font-size: 23px;
+							}
+							@include breakpoint(1600px) {
+								font-size: 27px;
+							}
+							@include breakpoint(1920px) {
+								font-size: 32px;
+							}
+						}
+						p {
+							@include breakpoint(1024px) {
+								font-size: 12px;
+							}
+							@include breakpoint(1366px) {
+								font-size: 16px;
+							}
+							@include breakpoint(1600px) {
+								font-size: 18px;
+							}
+							@include breakpoint(1920px) {
+								font-size: 22px;
+							}
+							span {
+								display: block;
+							}
+						}
+					}
+				}
+				img {
+					&.slider-img {
+						position: absolute;
+						@include opacity(0);
+						@include breakpoint(1024px) {
+							top: -119px;
+							right: -142px;
+							width: 490px;
+						}
+						@include breakpoint(1366px) {
+							top: -159px;
+							right: -190px;
+							width: 654px;
+						}
+						@include breakpoint(1600px) {
+							top: -186px;
+							right: -223px;
+							width: 766px;
+						}
+						@include breakpoint(1920px) {
+							top: -223px;
+							right: -267px;
+							width: 919px;
+						}
+					}
+					&.decoration {
+						width: 100%;
+					}
+				}
+				&.active {
+					@include opacity(1);
+					.slider-body {
+						@include animation(fadeLeftIn 1s 1 forwards alternate);
+					}
+					img {
+						&.slider-img {
+							@include breakpoint(1024px) {
+								right: -142px;
+								@include animation(fadeRightIn1024 1s 0.25s 1 forwards alternate);
+							}
+							@include breakpoint(1366px) {
+								right: -190px;
+								@include animation(fadeRightIn1366 1s 0.25s 1 forwards alternate);
+							}
+							@include breakpoint(1600px) {
+								right: -223px;
+								@include animation(fadeRightIn1600 1s 0.25s 1 forwards alternate);
+							}
+							@include breakpoint(1920px) {
+								right: -267px;
+								@include animation(fadeRightIn1920 1s 0.25s 1 forwards alternate);
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	&-infinite {
+		position: relative;
+		margin-left: auto;
+		margin-right: auto;
+		@include breakpoint(1024px) {
+			width: 709px;
+			padding-left: 27px;
+			padding-right: 27px;
+		}
+		@include breakpoint(1366px) {
+			width: 946px;
+			padding-left: 36px;
+			padding-right: 36px;
+		}
+		@include breakpoint(1600px) {
+			width: 1108px;
+			padding-left: 42px;
+			padding-right: 42px;
+		}
+		@include breakpoint(1920px) {
+			width: 1330px;
+			padding-left: 50px;
+			padding-right: 50px;
+		}
+		> .slider-wrap {
 			&::before, &::after {
 				display: table;
 				content: '';
@@ -722,32 +1157,50 @@ footer {
 			> .slider-item {
 				float: left;
 				position: relative;
-				width: 210px;
-				padding-left: 5px;
-				padding-right: 5px;
-				&.active {
-					width: 328px;
+				@include transition(width 0.3s linear);
+				@include breakpoint(1024px) {
+					width: 117px;
+					height: 393px;
+				}
+				@include breakpoint(1366px) {
+					width: 157px;
+					height: 524px;
+				}
+				@include breakpoint(1600px) {
+					width: 183px;
+					height: 614px;
+				}
+				@include breakpoint(1920px) {
+					width: 220px;
+					height: 737px;
 				}
 				.fellow-img {
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					width: calc(100% - 20px);
+					height: 100%;
+					@include translate(-50%, -50%);
+					@include transition(width 0.3s linear);
 					&--set {
+						padding-left: 10px;
+						padding-right: 10px;
+					}
+					&--active {
+						padding-left: 10px;
+						padding-right: 10px;
+						@include opacity(0);
+						z-index: 1;
+					}
+					img {
 						position: absolute;
 						top: 50%;
 						left: 50%;
+						width: 100%;
 						@include translate(-50%, -50%);
-						img {
-							&.on {
-								position: absolute;
-								top: 0;
-								left: 0;
-								z-index: 1;
-								@include opacity(0);
-							}
-						}
-					}
-					&--active {
-						img {
-							position: relative;
-							left: -135px;
+						z-index: 1;
+						&.on {
+							@include opacity(0);
 						}
 					}
 				}
@@ -756,12 +1209,94 @@ footer {
 						&--set {
 							img {
 								&.on {
-									@include opacity(0.1);
+									@include opacity(1);
 								}
 							}
 						}
-						&--active {
+					}
+				}
+				&.before {
+					z-index: 5;
+				}
+				&.active {
+					@include breakpoint(1024px) {
+						width: 180px;
+					}
+					@include breakpoint(1366px) {
+						width: 240px;
+					}
+					@include breakpoint(1600px) {
+						width: 282px;
+					}
+					@include breakpoint(1920px) {
+						width: 338px;
+					}
+					.fellow-img {
+						&--set {
+							@include opacity(0);
 						}
+						&--active {
+							@include opacity(1);
+							img {
+								@include breakpoint(1024px) {
+									width: 314px;
+								}
+								@include breakpoint(1366px) {
+									width: 418px;
+								}
+								@include breakpoint(1600px) {
+									width: 490px;
+								}
+								@include breakpoint(1920px) {
+									width: 588px;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		> .slider-dot {
+			display: flex;
+			position: absolute;
+			left: 50%;
+			bottom: 0;
+			@include translateX(-50%);
+			z-index: 5;
+			li {
+				margin-left: 5px;
+				margin-right: 5px;
+				background-color: rgba(#3d4049, 0.5);
+				@include border-radius(15px);
+				@include transition(all 0.3s);
+				@include breakpoint(1024px) {
+					width: 8px;
+					height: 8px;
+				}
+				@include breakpoint(1366px) {
+					width: 11px;
+					height: 11px;
+				}
+				@include breakpoint(1600px) {
+					width: 13px;
+					height: 13px;
+				}
+				@include breakpoint(1920px) {
+					width: 15px;
+					height: 15px;
+				}
+				&.active {
+					@include breakpoint(1024px) {
+						width: 21px;
+					}
+					@include breakpoint(1366px) {
+						width: 28px;
+					}
+					@include breakpoint(1600px) {
+						width: 33px;
+					}
+					@include breakpoint(1920px) {
+						width: 40px;
 					}
 				}
 			}
@@ -778,12 +1313,29 @@ footer {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				width: 50px;
-				height: 440px;
 				color: #fff;
-				font-size: 45px;
 				border: 1px solid #5e6271;
 				background-color: #4b4e5a;
+				@include breakpoint(1024px) {
+					width: 27px;
+					height: 235px;
+					font-size: 24px;
+				}
+				@include breakpoint(1366px) {
+					width: 36px;
+					height: 302px;
+					font-size: 32px;
+				}
+				@include breakpoint(1600px) {
+					width: 42px;
+					height: 360px;
+					font-size: 38px;
+				}
+				@include breakpoint(1920px) {
+					width: 50px;
+					height: 440px;
+					font-size: 45px;
+				}
 			}
 			&-item {
 				position: absolute;
@@ -793,15 +1345,90 @@ footer {
 				overflow: hidden;
 				z-index: 1;
 				@include transition(all 0.3s);
+				img {
+					@include breakpoint(1024px) {
+						width: 152px;
+					}
+					@include breakpoint(1366px) {
+						width: 203px;
+					}
+					@include breakpoint(1600px) {
+						width: 238px;
+					}
+					@include breakpoint(1920px) {
+						width: 285px;
+					}
+				}
 			}
 		}
 		&:hover {
 			.slider {
 				&-item {
-					width: 285px;
+					@include breakpoint(1024px) {
+						width: 152px;
+					}
+					@include breakpoint(1366px) {
+						width: 203px;
+					}
+					@include breakpoint(1600px) {
+						width: 238px;
+					}
+					@include breakpoint(1920px) {
+						width: 285px;
+					}
 				}
 			}
 		}
+	}
+}
+@include keyframes(fadeLeftIn) {
+	0% {
+		left: -100px;
+		opacity: 0;
+	}
+	100% {
+		left: 0px;
+		opacity: 1;
+	}
+}
+@include keyframes(fadeRightIn1024) {
+	0% {
+		right: -242px;
+		opacity: 0;
+	}
+	100% {
+		right: -142px;
+		opacity: 1;
+	}
+}
+@include keyframes(fadeRightIn1366) {
+	0% {
+		right: -290px;
+		opacity: 0;
+	}
+	100% {
+		right: -190px;
+		opacity: 1;
+	}
+}
+@include keyframes(fadeRightIn1600) {
+	0% {
+		right: -323px;
+		opacity: 0;
+	}
+	100% {
+		right: -223px;
+		opacity: 1;
+	}
+}
+@include keyframes(fadeRightIn1920) {
+	0% {
+		right: -367px;
+		opacity: 0;
+	}
+	100% {
+		right: -267px;
+		opacity: 1;
 	}
 }
 .card-group {
