--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -1097,6 +1097,7 @@ footer {
 				}
 				&.active {
 					@include opacity(1);
+					z-index: 5;
 					.slider-body {
 						@include animation(fadeLeftIn 1s 1 forwards alternate);
 					}
