--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -235,6 +235,7 @@ header {
 	position: relative;
 	padding-top: 10px;
 	min-height: 100vh;
+	overflow: hidden;
 	@include breakpoint(1024px) {
 		padding-top: 58px;
 	}
