--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -614,6 +614,7 @@ header {
   position: relative;
   padding-top: 10px;
   min-height: 100vh;
+  overflow: hidden;
 }
 @media (min-width: 1024px) {
   header {
