--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1352,7 +1352,7 @@ footer {
   width: 100%;
   bottom: 50px;
   left: 0;
-  z-index: 2;
+  z-index: 4;
 }
 @media (max-width: 1023px) {
   footer {
@@ -1429,8 +1429,7 @@ footer .container .sns li a:hover {
   }
 }
 .slider-lr {
-  min-height: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url("../img/bgMedia.png");
   background-position: center;
   background-attachment: fixed;
@@ -1439,18 +1438,14 @@ footer .container .sns li a:hover {
   -o-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
-  overflow: hidden;
 }
 .slider-lr > .slider-wrap {
   position: relative;
-  min-height: 100%;
-  height: 100%;
+  height: 100vh;
 }
 .slider-lr > .slider-wrap > .slider-item {
-  float: left;
   position: relative;
-  min-height: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 @media (min-width: 1024px) {
@@ -2432,25 +2427,14 @@ footer .container .sns li a:hover {
   position: relative;
 }
 .slider-equipment > .slider-wrap > .slider-item {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 100%;
   height: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 .slider-equipment > .slider-wrap > .slider-item.active {
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
   z-index: 2;
 }
 .slider-equipment > .slider-wrap > .slider-item > h3 {
@@ -2745,6 +2729,7 @@ footer .container .sns li a:hover {
 }
 .card-group .card-item {
   position: relative;
+  display: block;
 }
 @media (max-width: 1023px) {
   .card-group .card-item {
