--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -942,7 +942,7 @@ footer {
 			width: 100%;
 			height: 100%;
 			@include breakpoint(max-width 1023px) {
-				top: -150px;
+				top: -60px;
 			}
 			> .slider-item {
 				position: absolute;
@@ -1229,6 +1229,7 @@ footer {
 		> .slider-wrap {
 			@include breakpoint(max-width 1023px) {
 				position: relative;
+				top: -60px;
 				height: 100%;
 			}
 			&::before, &::after {
@@ -1446,7 +1447,7 @@ footer {
 				}
 				> h3 {
 					position: absolute;
-					top: 80px;
+					top: -15px;
 					left: 50%;
 					margin: 0;
 					padding-left: 0.2em;
@@ -1456,7 +1457,7 @@ footer {
 					letter-spacing: 0.2em;
 					@include translateX(-50%);
 					@include breakpoint(414px) {
-						top: 115px;
+						top: 15px;
 						font-size: 18px;
 					}
 				}
@@ -1681,13 +1682,17 @@ footer {
 .tab-group {
 	display: flex;
 	@include breakpoint(max-width 1023px) {
+		padding-top: 50px;
 		height: 100%;
+	}
+	@include breakpoint(max-width 413px) {
+		padding-top: 10px;
 	}
 	.tab-navi {
 		font-size: 0;
 		@include breakpoint(max-width 1023px) {
 			position: absolute;
-			top: 180px;
+			top: 80px;
 			width: 100%;
 			padding-left: 6.25%;
 			padding-right: 6.25%;
@@ -1697,29 +1702,29 @@ footer {
 			z-index: 3;
 		}
 		@include breakpoint(max-width 413px) {
-			top: 170px;
+			top: 70px;
 			grid-gap: 0 calc(100% - 90px);
 		}
 		@include breakpoint(max-width 374px) {
-			top: 115px;
+			top: 75px;
 		}
 		@include breakpoint(1024px) {
-			width: 187px;
+			width: 27px;
 			padding-top: 53px;
 			margin-right: 63px;
 		}
 		@include breakpoint(1366px) {
-			width: 250px;
+			width: 130px;
 			padding-top: 71px;
 			margin-right: 85px;
 		}
 		@include breakpoint(1600px) {
-			width: 294px;
+			width: 174px;
 			padding-top: 83px;
 			margin-right: 89px;
 		}
 		@include breakpoint(1920px) {
-			width: 351px;
+			width: 231px;
 			padding-top: 100px;
 			margin-right: 119px;
 		}
