--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1391,6 +1391,126 @@ footer .container .sns li a:hover {
   color: #55aba8;
 }
 
+ul.list-reset.app-list {
+  width: 100%;
+  align-items: center;
+}
+@media (min-width: 1024px) {
+  ul.list-reset.app-list {
+    margin-top: 45px;
+    margin-bottom: 45px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    justify-content: space-between;
+  }
+}
+@media (max-width: 1023px) {
+  ul.list-reset.app-list {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0.657em 0;
+    justify-content: center;
+    background-color: #000;
+    z-index: 7;
+  }
+}
+@media (max-width: 320px) {
+  ul.list-reset.app-list {
+    padding: 0.5em 0;
+  }
+}
+ul.list-reset.app-list li a {
+  display: block;
+}
+ul.list-reset.app-list li a img {
+  display: block;
+}
+@media (max-width: 1023px) {
+  ul.list-reset.app-list li:not(.app-logo) {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+}
+ul.list-reset.app-list li:not(.app-logo) img {
+  height: 45px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+@media (max-width: 375px) {
+  ul.list-reset.app-list li:not(.app-logo) img {
+    height: 40px;
+  }
+}
+@media (min-width: 1366px) {
+  ul.list-reset.app-list li:not(.app-logo) img {
+    height: 60px;
+  }
+}
+@media (min-width: 1600px) {
+  ul.list-reset.app-list li:not(.app-logo) img {
+    height: 70px;
+  }
+}
+@media (min-width: 1920px) {
+  ul.list-reset.app-list li:not(.app-logo) img {
+    height: 84px;
+  }
+}
+ul.list-reset.app-list li.app-logo a {
+  display: block;
+  padding: 5px 14px;
+  border: 1px solid #fff;
+}
+@media (min-width: 1024px) {
+  ul.list-reset.app-list li.app-logo a {
+    padding: 6px 15px;
+  }
+}
+@media (min-width: 1366px) {
+  ul.list-reset.app-list li.app-logo a {
+    padding: 7px 20px;
+  }
+}
+@media (min-width: 1600px) {
+  ul.list-reset.app-list li.app-logo a {
+    padding: 9px 23px;
+  }
+}
+@media (min-width: 1920px) {
+  ul.list-reset.app-list li.app-logo a {
+    padding: 10px 30px;
+  }
+}
+ul.list-reset.app-list li.app-logo a:hover {
+  background-color: #000;
+}
+ul.list-reset.app-list li.app-logo img {
+  height: 22px;
+}
+@media (max-width: 375px) {
+  ul.list-reset.app-list li.app-logo img {
+    height: 18px;
+  }
+}
+@media (min-width: 1366px) {
+  ul.list-reset.app-list li.app-logo img {
+    height: 29px;
+  }
+}
+@media (min-width: 1600px) {
+  ul.list-reset.app-list li.app-logo img {
+    height: 34px;
+  }
+}
+@media (min-width: 1920px) {
+  ul.list-reset.app-list li.app-logo img {
+    height: 42px;
+  }
+}
+
 .slider {
   position: relative;
 }
@@ -1420,7 +1540,7 @@ footer .container .sns li a:hover {
     transform: translateX(-50%);
   }
 }
-@media (max-width: 375px) {
+@media (max-width: 414px) {
   .slider .item-title {
     top: 30px;
     left: calc(50% + 14.5px);
@@ -1469,7 +1589,6 @@ footer .container .sns li a:hover {
 @media (max-width: 1023px) {
   .slider .item-container {
     height: 100%;
-    padding-top: 100px;
   }
 }
 @media (min-width: 1024px) {
@@ -1512,11 +1631,6 @@ footer .container .sns li a:hover {
   position: relative;
   width: 100%;
   height: 100%;
-}
-@media (max-width: 1023px) {
-  .slider-monster > .slider-wrap {
-    top: -60px;
-  }
 }
 .slider-monster > .slider-wrap > .slider-item {
   position: absolute;
@@ -1701,13 +1815,13 @@ footer .container .sns li a:hover {
 }
 @media (max-width: 1023px) {
   .slider-monster > .slider-wrap > .slider-item img.slider-img {
-    width: 135%;
+    width: 125%;
     margin-bottom: -27.5%;
   }
 }
 @media (max-width: 320px) {
   .slider-monster > .slider-wrap > .slider-item img.slider-img {
-    width: 130%;
+    width: 100%;
   }
 }
 @media (min-width: 1024px) {
@@ -1802,8 +1916,8 @@ footer .container .sns li a:hover {
 }
 @media (max-width: 1023px) {
   .slider-monster .slider-navi {
-    left: calc(15% - 13.5px);
-    bottom: 32.7%;
+    left: calc(10vw + 17.5px);
+    bottom: 29.7vh;
   }
 }
 @media (max-width: 320px) {
@@ -1911,7 +2025,7 @@ footer .container .sns li a:hover {
 @media (max-width: 1023px) {
   .slider-infinite > .slider-wrap {
     position: relative;
-    top: -60px;
+    top: 5%;
     height: 100%;
   }
 }
@@ -2196,6 +2310,11 @@ footer .container .sns li a:hover {
 .slider-equipment > .slider-wrap > .slider-item.active {
   z-index: 2;
 }
+@media (max-width: 414px) {
+  .slider-equipment > .slider-wrap > .slider-item {
+    padding-top: 90px;
+  }
+}
 .slider-equipment > .slider-wrap > .slider-item > h3 {
   position: absolute;
   top: -15px;
@@ -2213,7 +2332,7 @@ footer .container .sns li a:hover {
 }
 @media (min-width: 414px) {
   .slider-equipment > .slider-wrap > .slider-item > h3 {
-    top: 15px;
+    top: 85px;
     font-size: 18px;
   }
 }
@@ -2498,6 +2617,8 @@ footer .container .sns li a:hover {
 @media (max-width: 1023px) {
   .card-group {
     flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 90px;
   }
 }
 @media (min-width: 1024px) {
@@ -2580,7 +2701,6 @@ footer .container .sns li a:hover {
 }
 @media (max-width: 1023px) {
   .tab-group {
-    padding-top: 50px;
     height: 100%;
   }
 }
@@ -2595,7 +2715,7 @@ footer .container .sns li a:hover {
 @media (max-width: 1023px) {
   .tab-group .tab-navi {
     position: absolute;
-    top: 80px;
+    top: 140px;
     width: 100%;
     padding-left: 6.25%;
     padding-right: 6.25%;
@@ -3179,7 +3299,7 @@ footer .container .sns li a:hover {
 @media (max-width: 1023px) {
   .tab-group .tab-content-group--sub .content-img {
     width: 65%;
-    margin-bottom: 10%;
+    margin-bottom: 2.5%;
   }
 }
 @media (min-width: 1024px) {
