--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -323,7 +323,7 @@ nav {
 header {
 	position: relative;
 	// padding-top: 10px;
-	min-height: 100vh;
+	// min-height: 100vh;
 	overflow: hidden;
 	z-index: 3;
 	// @include breakpoint(1024px) {
