--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -1737,7 +1737,8 @@ ul.list-reset.app-list {
 	align-items: center;
 	@include breakpoint(max-width 1023px) {
 		flex-direction: column;
-		padding-bottom: 25px;
+		padding-top: 0px;
+		padding-bottom: 60px;
 	}
 	@include breakpoint(1024px) {
 		padding-top: 100px;
